syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "primary/";
option java_multiple_files = true;
option java_package = "io.grpc.examples.heartbeat";
option java_outer_classname = "HeartBeatProto";

package primary;

service PrimaryNode {
  rpc HeartBeat(DataNodeInfo) returns (google.protobuf.Empty){}
}

message DataNodeInfo {
  string id = 1;
  google.protobuf.Timestamp last_heart_beat_at = 2;
  repeated Volume volumes = 3;
  string address = 4;
}

message Volume {
  string id = 1;
  string dir = 2;
  int64 used_space = 3;
  int64 free_space = 4;
}